--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -176,6 +176,7 @@
 /extensions/tldr                                     @pomdtr
 /extensions/todo-list                                @maggie-j-liu
 /extensions/todoist                                  @thomaslombart
+/extensions/toggl-track                              @franzwilhelm
 /extensions/toolbox                                  @kkange
 /extensions/tower                                    @tdwesten
 /extensions/transmission                             @FezVrasta
