Add me as contributor to Safari extension

--- a/extensions/safari/package.json
+++ b/extensions/safari/package.json
@@ -5,6 +5,9 @@
   "description": "Manage your Safari Tabs (Local and iCloud) and Reading List",
   "icon": "safari-icon.png",
   "author": "loris",
+  "contributors": [
+    "thomas"
+  ],
   "license": "MIT",
   "commands": [
     {
