--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -144,7 +144,7 @@
 /extensions/ricescore                                @tonka3000
 /extensions/rss-reader                               @fuksman
 /extensions/sabnzbd                                  @jesse-c
-/extensions/safari                                   @loris
+/extensions/safari                                   @loris @thomaspaulmann
 /extensions/script-commands                          @unnamedd
 /extensions/script-kit                               @pomdtr
 /extensions/search-mdn                               @krzysztofzuraw
