--- a/examples/api-examples/package.json
+++ b/examples/api-examples/package.json
@@ -142,6 +142,52 @@
       "title": "Icons",
       "description": "Use different APIs to add built-in and bundled icons.",
       "mode": "view"
+    },
+    {
+      "name": "app-picker",
+      "title": "App Picker",
+      "description": "Raycast smoke test",
+      "mode": "view",
+      "preferences": [
+        {
+          "name": "link",
+          "type": "textfield",
+          "required": false,
+          "title": "Link",
+          "description": "Link",
+          "placeholder": "Link",
+          "default": "https://duckduckgo.com/?q={Query}"
+        },
+        {
+          "name": "openWithRequired",
+          "type": "appPicker",
+          "required": true,
+          "title": "Open with (required)",
+          "description": "Open with",
+          "default": "Firefox"
+        },
+        {
+          "name": "openWithOptional",
+          "type": "appPicker",
+          "required": false,
+          "title": "Open with (optional)",
+          "description": "Open with",
+          "default": "Safari"
+        },
+        {
+          "name": "ignoreValueProperty",
+          "type": "appPicker",
+          "required": false,
+          "title": "Open with (optional, ignore `value`)",
+          "description": "`value` property should not be fetched from the manifest file",
+          "default": "Safari",
+          "value": {
+            "name": "Firefox",
+            "bundleId": "org.mozilla.firefox",
+            "path": "/Applications/Firefox.app"
+          }
+        }
+      ]
     }
   ],
   "dependencies": {
