--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -119,6 +119,7 @@
 /extensions/myip                                     @kkange
 /extensions/netlify                                  @Destiner
 /extensions/notion                                   @HenriChabrand
+/extensions/nsis-reference                           @idleberg
 /extensions/obsidian                                 @marcjulianschwarz
 /extensions/ones                                     @k8scat
 /extensions/open-with-app                            @fturcheti
