Datadog: add dropdown to select host (#741)

--- a/extensions/datadog/package.json
+++ b/extensions/datadog/package.json
@@ -5,6 +5,9 @@
   "description": "Access Datadog resources",
   "icon": "icon@light.png",
   "author": "bgnfu7re",
+  "contributors": [
+    "rcruzper"
+  ],
   "license": "MIT",
   "commands": [
     {
@@ -45,6 +48,36 @@
       "title": "App Key",
       "description": "Datadog Application Key",
       "required": true
+    },
+    {
+      "type": "dropdown",
+      "name": "server",
+      "title": "Server",
+      "description": "Datadog server",
+      "required": true,
+      "data": [
+        {
+          "title": "US",
+          "value": "datadoghq.com"
+        },
+        {
+          "title": "US3",
+          "value": "us3.datadoghq.com"
+        },
+        {
+          "title": "US5",
+          "value": "us5.datadoghq.com"
+        },
+        {
+          "title": "EU",
+          "value": "datadoghq.eu"
+        },
+        {
+          "title": "US1-FED",
+          "value": "ddog-gov.com"
+        }
+      ],
+      "default": "datadoghq.com"
     }
   ],
   "dependencies": {
