add color rgb feature (homeassistant) (#760)
* feat: light rgb colors

* chore: new release version

* style: prettier code

* feat: add contributors to package.json

--- a/extensions/homeassistant/package.json
+++ b/extensions/homeassistant/package.json
@@ -2,8 +2,11 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "homeassistant",
   "title": "Home Assistant",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "author": "tonka3000",
+  "contributors": [
+    "altrdev"
+  ],
   "license": "MIT",
   "description": "Home Assistant remote control. Control your house with Raycast 🚀",
   "icon": "home-assistant.png",
