--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -89,7 +89,7 @@
 /extensions/hashnode                                 @dpnick
 /extensions/hazeover                                 @ratoru
 /extensions/hexlify                                  @gkpln3
-/extensions/homeassistant                            @tonka3000
+/extensions/homeassistant                            @tonka3000 @altrdev
 /extensions/huggingcast                              @ragnorc
 /extensions/imdb                                     @ryan-exe
 /extensions/inertiajs-documentation                  @danyelkeddah
