--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -99,6 +99,7 @@
 /extensions/json-format                              @Destiner
 /extensions/json2ts                                  @gon250
 /extensions/kaalam                                   @heertheeswaran
+/extensions/kaomoji-search                           @allexks
 /extensions/kill-process                             @rolandleth
 /extensions/kinopoisk                                @mattisssa
 /extensions/kubectx                                  @oktaysenkan
