Spotify Controls: toggle repeat and shuffle mode (#793)

--- a/extensions/spotify-controls/package.json
+++ b/extensions/spotify-controls/package.json
@@ -5,6 +5,9 @@
   "description": "Control the Spotify app for macOS with your keyboard.",
   "icon": "icon.png",
   "author": "thomas",
+  "contributors": [
+    "altrdev"
+  ],
   "license": "MIT",
   "commands": [
     {
@@ -55,6 +58,20 @@
       "subtitle": "Spotify",
       "description": "Currently playing song's URL in Spotify.",
       "mode": "no-view"
+    },
+    {
+      "name": "shuffle",
+      "title": "Toggle Shuffle",
+      "subtitle": "Spotify",
+      "description": "Toggles shuffle mode in Spotify.",
+      "mode": "no-view"
+    },
+    {
+      "name": "repeat",
+      "title": "Toggle Repeat",
+      "subtitle": "Spotify",
+      "description": "Toggles repeat mode in Spotify.",
+      "mode": "no-view"
     }
   ],
   "dependencies": {
@@ -74,6 +91,7 @@
   },
   "scripts": {
     "build": "ray build -e dist",
-    "dev": "ray develop"
+    "dev": "ray develop",
+    "lint": "ray lint"
   }
 }
