--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -165,7 +165,7 @@
 /extensions/sourcegraph                              @bobheadxi
 /extensions/spatie-documentation                     @danyelkeddah
 /extensions/speedtest                                @tonka3000
-/extensions/spotify-controls                         @thomaspaulmann
+/extensions/spotify-controls                         @thomaspaulmann @altrdev
 /extensions/spotify-player                           @mattisssa
 /extensions/stackoverflow                            @sadanand-singh
 /extensions/surge                                    @ysj151215
