--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -119,6 +119,7 @@
 /extensions/must                                     @eggsy
 /extensions/myip                                     @kkange
 /extensions/netlify                                  @Destiner
+/extensions/nos-news                                 @Joran-Dob
 /extensions/notion                                   @HenriChabrand
 /extensions/nsis-reference                           @idleberg
 /extensions/obsidian                                 @marcjulianschwarz
