--- a/extensions/wikipedia/package.json
+++ b/extensions/wikipedia/package.json
@@ -30,10 +30,9 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.25.7",
+    "@raycast/api": "^1.27.1",
     "swr": "^1.0.1",
-    "got": "^11.8.3",
-    "run-applescript": "^6.0.0"
+    "got": "^11.8.3"
   },
   "devDependencies": {
     "@types/node": "~16.10.0",
@@ -47,6 +46,8 @@
   },
   "scripts": {
     "build": "ray build -e dist",
-    "dev": "ray develop"
+    "dev": "ray develop",
+    "fix-lint": "ray lint --fix",
+    "lint": "ray lint"
   }
 }
