--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -205,6 +205,7 @@
 /extensions/wikipedia                                @vimtor
 /extensions/wistia                                   @ddoria921
 /extensions/wolfram-alpha                            @mathieudutour
+/extensions/word-search                              @RishabSwift
 /extensions/xcode                                    @SvenTiigi
 /extensions/xkcd                                     @maggie-j-liu
 /extensions/youdao-translate                         @tiancheng92
