--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -11,6 +11,7 @@
 /extensions/audio-device                             @benvp @mathieudutour
 /extensions/authy                                    @guga4ka
 /extensions/base64                                   @DanielSinclair
+/extensions/bazinga-tools                            @luin
 /extensions/bear                                     @hmarr
 /extensions/biaodian                                 @gasolin
 /extensions/binance                                  @grzegorzkrukowski
