--- a/extensions/bitwarden/package.json
+++ b/extensions/bitwarden/package.json
@@ -18,7 +18,27 @@
       "title": "Search Vault",
       "subtitle": "Bitwarden",
       "description": "Search all items in the authenticated Bitwarden vault.",
-      "mode": "view"
+      "mode": "view",
+      "preferences": [
+        {
+          "name": "primaryAction",
+          "type": "dropdown",
+          "description": "The primary action to perform on a vault item.",
+          "required": false,
+          "title": "Primary Action",
+          "default": "copy",
+          "data": [
+            {
+              "title": "Paste to Active App",
+              "value": "paste"
+            },
+            {
+              "title": "Copy to Clipboard",
+              "value": "copy"
+            }
+          ]
+        }
+      ]
     },
     {
       "name": "lock-vault",
@@ -69,18 +89,20 @@
     "treeify": "^1.1.0"
   },
   "devDependencies": {
+    "@types/treeify": "^1.0.0",
     "@types/node": "~16.10.0",
     "@types/react": "^17.0.28",
-    "@types/treeify": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "prettier": "^2.5.1",
     "react-devtools": "^4.19.2",
     "typescript": "^4.4.3"
   },
   "scripts": {
+    "build": "ray build -e dist",
     "dev": "ray develop",
-    "build": "ray build -e dist"
+    "lint": "ray lint"
   }
 }
