--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -63,6 +63,7 @@
 /extensions/emoji                                    @FezVrasta
 /extensions/ens-name-lookup                          @Yukaii
 /extensions/envato                                   @Slllava
+/extensions/ethereum-utils                           @Destiner
 /extensions/everhour                                 @farisaziz12
 /extensions/figma-files                              @michaelwschultz
 /extensions/file-manager                             @es183923
