Spotify Controls: Adds `Shuffle Play` + change in behavior (#813)
- all commands, except `current`, now ensure Spotify is running
- `current` has handling for Spotify not being open

--- a/extensions/spotify-controls/package.json
+++ b/extensions/spotify-controls/package.json
@@ -6,7 +6,8 @@
   "icon": "icon.png",
   "author": "thomas",
   "contributors": [
-    "altrdev"
+    "altrdev",
+    "ron-myers"
   ],
   "license": "MIT",
   "commands": [
@@ -64,6 +65,13 @@
       "title": "Toggle Shuffle",
       "subtitle": "Spotify",
       "description": "Toggles shuffle mode in Spotify.",
+      "mode": "no-view"
+    },
+    {
+      "name": "shufflePlay",
+      "title": "Shuffle Play",
+      "subtitle": "Spotify",
+      "description": "Plays current track with shuffle enabled.",
       "mode": "no-view"
     },
     {
