--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -169,7 +169,7 @@
 /extensions/sourcegraph                              @bobheadxi
 /extensions/spatie-documentation                     @danyelkeddah
 /extensions/speedtest                                @tonka3000
-/extensions/spotify-controls                         @thomaspaulmann @altrdev
+/extensions/spotify-controls                         @thomaspaulmann @altrdev @ron-myers
 /extensions/spotify-player                           @mattisssa
 /extensions/stackoverflow                            @sadanand-singh
 /extensions/surge                                    @ysj151215
