--- a/.github/workflows/extensions_build_publish.yml
+++ b/.github/workflows/extensions_build_publish.yml
@@ -7,8 +7,8 @@ on:
         description: 'Extensions to update (space-separated relative paths for extensions) or ("extensions/**"" to execute on all possible subdirectories)'
         required: true
       command:
-        description: 'Ray CLI command to run (build | publish)'
-        default: 'build'
+        description: "Ray CLI command to run (build | publish)"
+        default: "build"
         required: true
       cli_version:
         description: 'CLI Version (optional, eg. "1.0.0")'
@@ -33,7 +33,7 @@ jobs:
           fetch-depth: 0
       - name: Run Ray CLI
         id: ray_cli
-        uses: raycast/github-actions/ray@v1.5.0
+        uses: raycast/github-actions/ray@v1.6.0
         with:
           access_token: "${{ secrets.RAYCAST_CLI_ACCESS_TOKEN }}"
           api_url: "${{ secrets.RAYCAST_CLI_API_URL }}"
@@ -41,7 +41,7 @@ jobs:
           paths: "${{ github.event.inputs.paths }}"
           cli_version: "${{ github.event.inputs.cli_version }}"
       - name: Post Store URLs
-        uses: raycast/github-actions/git-post-store-urls-to-pr@v1.5.0
+        uses: raycast/github-actions/git-post-store-urls-to-pr@v1.6.0
         with:
           store_urls: ${{ steps.ray_cli.outputs.store_urls }}
           github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
