--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -81,6 +81,7 @@
 /extensions/google-books                             @Ali-Parandeh
 /extensions/google-chrome                            @rgomezcasas @bromanko
 /extensions/google-chrome-profiles                   @frouo
+/extensions/google-cloud-platform-search             @klaa97
 /extensions/google-maps-search                       @ratoru
 /extensions/google-search                            @mblode
 /extensions/google-translate                         @ospfranco
