--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -198,6 +198,7 @@
 /extensions/ulysses                                  @praveenjuge
 /extensions/unicode-symbols                          @mmazzarolo
 /extensions/unix-timestamp                           @Destiner
+/extensions/unsplash                                 @eggsy
 /extensions/uuid-generator                           @jmaeso
 /extensions/v2ex                                     @mopig
 /extensions/vault                                    @ricoberger
