--- a/.github/workflows/sync-docs.yml
+++ b/.github/workflows/sync-docs.yml
@@ -21,7 +21,6 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v14.3
         with:
-          separator: ","
           files: |
             docs/**
 
@@ -43,19 +42,18 @@ jobs:
 
           git clone --single-branch --branch "master" "https://$API_TOKEN_GITHUB@github.com/raycast/raycast-macos.git" "raycast-macos"
 
-          IFS=$','
-
           for file in ${{ steps.changed-files.outputs.deleted_files }}; do
             echo "Removing raycast-macos/Commands/$file"
-            rm "raycast-macos/Commands/$file"
+            # If it's already removed, that's ok
+            rm "raycast-macos/Commands/$file" || true
           done
 
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
             echo "Updating raycast-macos/Commands/$file"
-            rsync -arv "$file" "raycast-macos/Commands/$file"
+            # If this fails, it's because there is a space in the filename
+            # so it's from GitBook messing things up. Ignore it
+            rsync -arv "$file" "raycast-macos/Commands/$file" || true
           done
-
-          IFS=$' '
 
           cd raycast-macos
 
