--- a/extensions/todoist/package.json
+++ b/extensions/todoist/package.json
@@ -51,14 +51,58 @@
       "title": "Todoist Token",
       "description": "Your Todoist Token. Find it in Todoist integration settings view.",
       "placeholder": "Enter your Todoist token"
+    },
+    {
+      "name": "todayGroupBy",
+      "type": "dropdown",
+      "data": [
+        {
+          "title": "Default",
+          "value": "default"
+        },
+        {
+          "title": "Priority",
+          "value": "priority"
+        },
+        {
+          "title": "Project",
+          "value": "project"
+        }
+      ],
+      "default": "default",
+      "required": false,
+      "title": "Today's Group By Options",
+      "description": "Indicates how you want to group your tasks in the Today view. Can be 'Prioriy' or 'Project'."
+    },
+    {
+      "name": "projectGroupBy",
+      "type": "dropdown",
+      "data": [
+        {
+          "title": "Default",
+          "value": "default"
+        },
+        {
+          "title": "Priority",
+          "value": "priority"
+        },
+        {
+          "title": "Date",
+          "value": "date"
+        }
+      ],
+      "default": "default",
+      "required": false,
+      "title": "Project's Group By Options",
+      "description": "Indicates how you want to group your tasks in the Project view. Can be 'Prioriy' or 'Date'."
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.26.3",
-    "axios": "^0.24.0",
-    "date-fns": "^2.27.0",
+    "@doist/todoist-api-typescript": "^1.5.0",
+    "@raycast/api": "^1.27.1",
+    "date-fns": "^2.28.0",
     "lodash": "^4.17.21",
-    "swr": "^1.0.0"
+    "swr": "^1.2.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.178",
