--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -138,6 +138,7 @@
 /extensions/productboard                             @honzatmn
 /extensions/producthunt                              @ragnorc
 /extensions/qr-code-scanner                          @StevenRCE0
+/extensions/qrcode-generator                         @Melvynx
 /extensions/quick-open-project                       @zerowidth
 /extensions/quick-search                             @iwfan
 /extensions/radix                                    @peduarte
