Add version 9.x of the docs to laravel docs (#838)

--- a/extensions/laravel-docs/package.json
+++ b/extensions/laravel-docs/package.json
@@ -31,6 +31,10 @@
               "value": "master"
             },
             {
+              "title": "9",
+              "value": "9.x"
+            },
+            {
               "title": "8",
               "value": "8.x"
             },
