--- a/extensions/pinboard/package.json
+++ b/extensions/pinboard/package.json
@@ -48,9 +48,9 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.25.0",
+    "@raycast/api": "^1.28.0",
     "he": "^1.2.0",
-    "node-fetch": "^3.0.0"
+    "node-fetch": "^3.2.0"
   },
   "devDependencies": {
     "@types/he": "^1.1.2",
@@ -60,6 +60,7 @@
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "typescript": "^4.4.3"
   },
   "scripts": {
