Sourcegraph: Feb 7, 2022 update (#833)
* Publish raycast-sourcegraph@2f31f12

Version: https://github.com/bobheadxi/raycast-sourcegraph/commit/2f31f12

* Publish raycast-sourcegraph@5ddc962

Version: https://github.com/bobheadxi/raycast-sourcegraph/commit/5ddc962

* Publish raycast-sourcegraph@82c7270

Version: https://github.com/bobheadxi/raycast-sourcegraph/commit/82c7270

* Publish raycast-sourcegraph@be96108

Version: https://github.com/bobheadxi/raycast-sourcegraph/commit/be96108

--- a/extensions/sourcegraph/package.json
+++ b/extensions/sourcegraph/package.json
@@ -120,11 +120,10 @@
   ],
   "dependencies": {
     "@bobheadxi/node-eventsource-http2": "^1.1.1",
-    "@raycast/api": "^1.27.0",
+    "@raycast/api": "^1.28.0",
     "luxon": "^2.3.0",
-    "node-fetch": "^3.0.0",
+    "node-fetch": "^3.2.0",
     "remark": "^14.0.2",
-    "sourcegraph": "^25.4.0",
     "strip-markdown": "^5.0.0"
   },
   "devDependencies": {
@@ -143,7 +142,7 @@
     "build": "ray build -e dist",
     "dev": "ray develop",
     "lint": "ray lint",
-    "fmt": "prettier --config .prettierrc -w ./src",
+    "fmt": "ray lint --fix",
     "raycast-publish": ".scripts/raycast-publish.sh"
   }
 }
