--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -31,6 +31,7 @@
 /extensions/canvascast                               @YodaLightsabr
 /extensions/change-case                              @es183923
 /extensions/change-scroll-direction                  @gregoralbrecht
+/extensions/cheatsheets                              @Destiner
 /extensions/circle-ci                                @qeude @kudrykv
 /extensions/clash                                    @ciiiii
 /extensions/cleanshotx                               @Aayush9029
