--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -133,6 +133,7 @@
 /extensions/open-with-app                            @fturcheti
 /extensions/opsgenie                                 @ricoberger
 /extensions/party-parrot                             @thomaspaulmann
+/extensions/pestphp-documentation                    @danyelkeddah
 /extensions/pinboard                                 @fe9lix
 /extensions/pipedrive                                @stephendolan
 /extensions/ploi                                     @Cannonb4ll
