--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -214,7 +214,7 @@
 /extensions/wikipedia                                @vimtor
 /extensions/wistia                                   @ddoria921
 /extensions/wolfram-alpha                            @mathieudutour
-/extensions/word-search                              @RishabSwift
+/extensions/word-search                              @RishabSwift @thomaspaulmann
 /extensions/xcode                                    @SvenTiigi
 /extensions/xkcd                                     @maggie-j-liu
 /extensions/youdao-translate                         @tiancheng92
