--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -149,7 +149,7 @@
 /extensions/raindrop                                 @lardissone
 /extensions/random-data-generator                    @loris
 /extensions/random-email                             @rkjaer
-/extensions/ray-so                                   @gt-codes
+/extensions/ray-so                                   @gt-codes @RSO
 /extensions/rebrandly                                @grikomsn
 /extensions/remove-background                        @maantje
 /extensions/render                                   @Destiner
