--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -9,7 +9,7 @@
 /extensions/apple-notes                              @tumispro
 /extensions/atomic                                   @joepio
 /extensions/audio-device                             @benvp @mathieudutour
-/extensions/authy                                    @guga4ka
+/extensions/authy                                    @guga4ka @lukekarrys
 /extensions/banca-d-italia-currency-converter        @FezVrasta
 /extensions/base64                                   @DanielSinclair
 /extensions/bazinga-tools                            @luin
