--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -106,6 +106,7 @@
 /extensions/json2ts                                  @gon250
 /extensions/kaalam                                   @heertheeswaran
 /extensions/kaomoji-search                           @allexks
+/extensions/keepassxc                                @zkytech
 /extensions/kill-process                             @rolandleth
 /extensions/kinopoisk                                @mattisssa
 /extensions/kubectx                                  @oktaysenkan
