--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -122,6 +122,7 @@
 /extensions/markdown-reference                       @codedbyjordan
 /extensions/microsoft-edge                           @KartikKumarSahoo @bromanko
 /extensions/mldocs                                   @sadanand-singh
+/extensions/moji                                     @Kasper4649
 /extensions/music                                    @splash-cli
 /extensions/must                                     @eggsy
 /extensions/myip                                     @kkange
