--- a/.github/workflows/notify-contributors.yml
+++ b/.github/workflows/notify-contributors.yml
@@ -20,15 +20,12 @@ jobs:
       - name: Get changed files in the docs folder
         id: changed-files
         uses: tj-actions/changed-files@v14.3
-        with:
-          files: |
-            extensions/**
 
       - uses: actions/github-script@v5
         with:
           github-token: ${{ secrets.RAYCAST_BOT_API_ACCESS_TOKEN }}
           script: |
-            const script = require('../../scripts/notify-contributors.js')
+            const script = require('./scripts/notify-contributors-on-pr')
             await script({
               github,
               context,
