--- a/.github/workflows/notify-contributors.yml
+++ b/.github/workflows/notify-contributors.yml
@@ -9,18 +9,14 @@ jobs:
   notify-contributors-on-pr:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
-          fetch-depth: 2
-
       - name: Setup Node.js
         uses: raycast/github-actions/setup-node@master
 
       - name: Get changed files in the docs folder
         id: changed-files
-        uses: tj-actions/changed-files@v14.3
+        uses: Ana06/get-changed-files@v1.1
+        with:
+          format: "json"
 
       - uses: actions/github-script@v5
         with:
@@ -31,7 +27,7 @@ jobs:
               github,
               context,
               core,
-              changedFiles: "${{ steps.changed-files.outputs.all_changed_files }}".split(' ')
+              changedFiles: ${{ steps.changed-files.outputs.all }}
             })
 
       - name: Notify Failure to Slack
