Need to checkout to have the script

--- a/.github/workflows/notify-contributors.yml
+++ b/.github/workflows/notify-contributors.yml
@@ -9,6 +9,9 @@ jobs:
   notify-contributors-on-pr:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Setup Node.js
         uses: raycast/github-actions/setup-node@master
 
