--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -208,6 +208,7 @@
 /extensions/unicode-symbols                          @mmazzarolo
 /extensions/unix-timestamp                           @Destiner
 /extensions/unsplash                                 @eggsy
+/extensions/url-tools                                @joshauh46
 /extensions/uuid-generator                           @jmaeso
 /extensions/v2ex                                     @mopig
 /extensions/vault                                    @ricoberger
