--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -144,6 +144,7 @@
 /extensions/pinboard                                 @fe9lix
 /extensions/pipedrive                                @stephendolan
 /extensions/ploi                                     @Cannonb4ll
+/extensions/pokedex                                  @anhthang
 /extensions/polished                                 @LekoArts
 /extensions/productboard                             @honzatmn
 /extensions/producthunt                              @ragnorc
