--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -110,6 +110,7 @@
 /extensions/json-to-go                               @chyroc
 /extensions/json2ts                                  @gon250
 /extensions/kaalam                                   @heertheeswaran
+/extensions/kagi-search                              @fearoffish
 /extensions/kaomoji-search                           @allexks
 /extensions/keepassxc                                @zkytech
 /extensions/kill-process                             @rolandleth
@@ -163,6 +164,7 @@
 /extensions/remove-background                        @maantje
 /extensions/render                                   @Destiner
 /extensions/ricescore                                @tonka3000
+/extensions/roblox-games                             @TayIorRobinson
 /extensions/rss-reader                               @fuksman
 /extensions/sabnzbd                                  @jesse-c
 /extensions/safari                                   @loris @thomaspaulmann
