--- a/.github/workflows/extensions_build_publish.yml
+++ b/.github/workflows/extensions_build_publish.yml
@@ -29,6 +29,9 @@ jobs:
     steps:
       - name: Checkout
         uses: raycast/github-actions/git-checkout@v1.6.0
+      # This makes sure that the problems found while validating the extensions are shown in the PR diff
+      - name: Register Problem Matcher for Ray CLI
+        run: echo "##[add-matcher].github/ray.matcher.json"
       - name: Run Ray CLI
         id: ray_cli
         uses: raycast/github-actions/ray@v1.6.0
