--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -6,7 +6,7 @@
 /extensions/algolia                                  @valentindotxyz
 /extensions/amazon-aws                               @victor-falcon @Hodglim
 /extensions/api-icon-list                            @PitNikola
-/extensions/apple-notes                              @tumispro
+/extensions/apple-notes                              @tumispro @ron-myers
 /extensions/atomic                                   @joepio
 /extensions/audio-device                             @benvp @mathieudutour
 /extensions/authy                                    @guga4ka @lukekarrys
