--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -14,6 +14,7 @@
 /extensions/base64                                   @DanielSinclair
 /extensions/bazinga-tools                            @luin
 /extensions/bear                                     @hmarr
+/extensions/betterdiscord-search                     @TheCommieAxolotl
 /extensions/biaodian                                 @gasolin
 /extensions/binance                                  @grzegorzkrukowski
 /extensions/bitbucket                                @Lp-Francois
