--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -150,6 +150,7 @@
 /extensions/ploi                                     @Cannonb4ll
 /extensions/pokedex                                  @anhthang
 /extensions/polished                                 @LekoArts
+/extensions/port-manager                             @lucaschultz
 /extensions/productboard                             @honzatmn
 /extensions/producthunt                              @ragnorc
 /extensions/qr-code-scanner                          @StevenRCE0
