--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -149,6 +149,7 @@
 /extensions/opsgenie                                 @ricoberger
 /extensions/party-parrot                             @thomaspaulmann
 /extensions/pestphp-documentation                    @danyelkeddah
+/extensions/phpmon                                   @nicoverbruggen
 /extensions/pinboard                                 @fe9lix
 /extensions/pipedrive                                @stephendolan
 /extensions/ploi                                     @Cannonb4ll
