--- a/extensions/bitwarden/package.json
+++ b/extensions/bitwarden/package.json
@@ -84,7 +84,7 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.25.0",
+    "@raycast/api": "^1.27.1",
     "execa": "^5.1.1",
     "treeify": "^1.1.0"
   },
@@ -98,7 +98,8 @@
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.5.1",
     "react-devtools": "^4.19.2",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "@types/treeify": "^1.0.0"
   },
   "scripts": {
     "build": "ray build -e dist",
